test/fails/bad_casts/basics1.lgl
tag coord a is vec<2>;
tag coord b is vec<2>;

void main() {
    a avec = [1., 2.];
    b fail = avec in b; //No path
}